# serializer version: 1
# name: test_the_device
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'whiskerless',
        'LR4C000001',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Whisker',
    'model': 'Litter-Robot 4',
    'model_id': None,
    'name': 'Litter-Robot 4',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'LR4C000001',
    'sw_version': '1.1.75',
    'via_device_id': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_bonnet_removed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.litter_robot_4_bonnet_removed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bonnet removed',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Bonnet removed',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bonnet_removed',
    'unique_id': 'LR4C000001_bonnet_removed',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_bonnet_removed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Litter-Robot 4 Bonnet removed',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.litter_robot_4_bonnet_removed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_cat_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.litter_robot_4_cat_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cat detected',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.OCCUPANCY: 'occupancy'>,
    'original_icon': None,
    'original_name': 'Cat detected',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cat_detected',
    'unique_id': 'LR4C000001_cat_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_cat_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'occupancy',
      'friendly_name': 'Litter-Robot 4 Cat detected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.litter_robot_4_cat_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_globe_motor_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.litter_robot_4_globe_motor_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Globe motor fault',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Globe motor fault',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'globe_motor_fault',
    'unique_id': 'LR4C000001_globe_motor_fault',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_globe_motor_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Litter-Robot 4 Globe motor fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.litter_robot_4_globe_motor_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_hopper-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.litter_robot_4_hopper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hopper',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Hopper',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hopper_connected',
    'unique_id': 'LR4C000001_hopper_connected',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_hopper_out_of_litter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.litter_robot_4_hopper_out_of_litter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hopper out of litter',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hopper out of litter',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hopper_empty',
    'unique_id': 'LR4C000001_hopper_empty',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_waste_drawer_full-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.litter_robot_4_waste_drawer_full',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Waste drawer full',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Waste drawer full',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'drawer_full',
    'unique_id': 'LR4C000001_drawer_full',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[binary_sensor.litter_robot_4_waste_drawer_full-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Litter-Robot 4 Waste drawer full',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.litter_robot_4_waste_drawer_full',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_calibrate_litter_empty-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.litter_robot_4_calibrate_litter_empty',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Calibrate litter: empty',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Calibrate litter: empty',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'calibrate_litter_empty',
    'unique_id': 'LR4C000001_calibrate_litter_empty',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_calibrate_litter_empty-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Calibrate litter: empty',
    }),
    'context': <ANY>,
    'entity_id': 'button.litter_robot_4_calibrate_litter_empty',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_calibrate_litter_filled_to_the_line-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.litter_robot_4_calibrate_litter_filled_to_the_line',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Calibrate litter: filled to the line',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Calibrate litter: filled to the line',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'calibrate_litter_full',
    'unique_id': 'LR4C000001_calibrate_litter_full',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_calibrate_litter_filled_to_the_line-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Calibrate litter: filled to the line',
    }),
    'context': <ANY>,
    'entity_id': 'button.litter_robot_4_calibrate_litter_filled_to_the_line',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_empty_cycle_danger-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.litter_robot_4_empty_cycle_danger',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Empty cycle (danger)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Empty cycle (danger)',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_empty_cycle',
    'unique_id': 'LR4C000001_start_empty_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_power_toggle_danger-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.litter_robot_4_power_toggle_danger',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power toggle (danger)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power toggle (danger)',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_toggle',
    'unique_id': 'LR4C000001_power_toggle',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_refresh-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.litter_robot_4_refresh',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refresh',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refresh',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'refresh',
    'unique_id': 'LR4C000001_refresh',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_refresh-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Refresh',
    }),
    'context': <ANY>,
    'entity_id': 'button.litter_robot_4_refresh',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_reset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.litter_robot_4_reset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'panel_reset',
    'unique_id': 'LR4C000001_panel_reset',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Reset',
    }),
    'context': <ANY>,
    'entity_id': 'button.litter_robot_4_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_start_clean_cycle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.litter_robot_4_start_clean_cycle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start clean cycle',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start clean cycle',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_clean_cycle',
    'unique_id': 'LR4C000001_start_clean_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[button.litter_robot_4_start_clean_cycle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Start clean cycle',
    }),
    'context': <ANY>,
    'entity_id': 'button.litter_robot_4_start_clean_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_clean_cycle_wait_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30,
      'min': 3,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.litter_robot_4_clean_cycle_wait_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Clean cycle wait time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Clean cycle wait time',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'clean_cycle_wait',
    'unique_id': 'LR4C000001_clean_cycle_wait',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_clean_cycle_wait_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Clean cycle wait time',
      'max': 30,
      'min': 3,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.litter_robot_4_clean_cycle_wait_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_night_light_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.litter_robot_4_night_light_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night light brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night light brightness',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_light_brightness',
    'unique_id': 'LR4C000001_night_light_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_night_light_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Night light brightness',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.litter_robot_4_night_light_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_panel_brightness_bright_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.litter_robot_4_panel_brightness_bright_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Panel brightness (bright room)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Panel brightness (bright room)',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'panel_brightness_high',
    'unique_id': 'LR4C000001_panel_brightness_high',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_panel_brightness_bright_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Panel brightness (bright room)',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.litter_robot_4_panel_brightness_bright_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_panel_brightness_dark_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.litter_robot_4_panel_brightness_dark_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Panel brightness (dark room)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Panel brightness (dark room)',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'panel_brightness_low',
    'unique_id': 'LR4C000001_panel_brightness_low',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface[number.litter_robot_4_panel_brightness_dark_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Panel brightness (dark room)',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.litter_robot_4_panel_brightness_dark_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[select.litter_robot_4_night_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.litter_robot_4_night_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night light',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_light_mode',
    'unique_id': 'LR4C000001_night_light_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[select.litter_robot_4_night_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Night light',
      'options': list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.litter_robot_4_night_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_clean_cycle_count-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.litter_robot_4_clean_cycle_count',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Clean cycle count',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Clean cycle count',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'clean_cycle_count',
    'unique_id': 'LR4C000001_clean_cycle_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_clean_cycle_count-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Clean cycle count',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_clean_cycle_count',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1284',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_hopper_fill_raw-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_hopper_fill_raw',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hopper fill (raw)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hopper fill (raw)',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hopper_fill',
    'unique_id': 'LR4C000001_hopper_fill',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_hopper_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_hopper_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hopper level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hopper level',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hopper_level',
    'unique_id': 'LR4C000001_hopper_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_last_cat_visit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_last_cat_visit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last cat visit',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last cat visit',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_cat_visit',
    'unique_id': 'LR4C000001_last_cat_visit',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_last_cat_visit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Litter-Robot 4 Last cat visit',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_last_cat_visit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_last_hopper_dispense-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_last_hopper_dispense',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last hopper dispense',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last hopper dispense',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_hopper_dispensed',
    'unique_id': 'LR4C000001_last_hopper_dispensed',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_last_visit_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_last_visit_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last visit duration',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Last visit duration',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_visit_duration',
    'unique_id': 'LR4C000001_last_visit_duration',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_litter_calibration_reference-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.litter_robot_4_litter_calibration_reference',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Litter calibration reference',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Litter calibration reference',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'litter_reference',
    'unique_id': 'LR4C000001_litter_reference',
    'unit_of_measurement': <UnitOfLength.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_litter_calibration_reference-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'Litter-Robot 4 Litter calibration reference',
      'unit_of_measurement': <UnitOfLength.MILLIMETERS: 'mm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_litter_calibration_reference',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_litter_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_litter_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Litter level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Litter level',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'litter_level',
    'unique_id': 'LR4C000001_litter_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_litter_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Litter level',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_litter_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '62',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_litter_level_distance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.litter_robot_4_litter_level_distance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Litter level distance',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Litter level distance',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'litter_level_mm',
    'unique_id': 'LR4C000001_litter_level_mm',
    'unit_of_measurement': <UnitOfLength.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_pet_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_pet_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pet weight',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Pet weight',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pet_weight',
    'unique_id': 'LR4C000001_pet_weight',
    'unit_of_measurement': <UnitOfMass.POUNDS: 'lb'>,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_pet_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'weight',
      'friendly_name': 'Litter-Robot 4 Pet weight',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfMass.POUNDS: 'lb'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_pet_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'ready',
        'cat_detected',
        'clean_cycle',
        'empty_cycle',
        'power_up_cycle',
        'cat_sensor_timing',
        'bonnet_removed',
        'changing_filter',
        'powering_up',
        'powering_down',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'LR4C000001_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Litter-Robot 4 Status',
      'options': list([
        'ready',
        'cat_detected',
        'clean_cycle',
        'empty_cycle',
        'power_up_cycle',
        'cat_sensor_timing',
        'bonnet_removed',
        'changing_filter',
        'powering_up',
        'powering_down',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ready',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_waste_drawer_last_moved-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_waste_drawer_last_moved',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Waste drawer last moved',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Waste drawer last moved',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'waste_drawer_last_moved',
    'unique_id': 'LR4C000001_waste_drawer_last_moved',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_waste_drawer_last_moved-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Litter-Robot 4 Waste drawer last moved',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_waste_drawer_last_moved',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_waste_drawer_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.litter_robot_4_waste_drawer_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Waste drawer level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Waste drawer level',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'waste_drawer_level',
    'unique_id': 'LR4C000001_waste_drawer_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_waste_drawer_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Waste drawer level',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.litter_robot_4_waste_drawer_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_the_entity_surface[sensor.litter_robot_4_wi_fi_signal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.litter_robot_4_wi_fi_signal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wi-Fi signal',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Wi-Fi signal',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_rssi',
    'unique_id': 'LR4C000001_wifi_rssi',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_the_entity_surface[switch.litter_robot_4_control_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.litter_robot_4_control_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Control lock',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Control lock',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'keypad_lockout',
    'unique_id': 'LR4C000001_keypad_lockout',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[switch.litter_robot_4_control_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Litter-Robot 4 Control lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.litter_robot_4_control_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[switch.litter_robot_4_panel_sleep_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.litter_robot_4_panel_sleep_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Panel sleep mode',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Panel sleep mode',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'panel_sleep_mode',
    'unique_id': 'LR4C000001_panel_sleep_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[switch.litter_robot_4_panel_sleep_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Litter-Robot 4 Panel sleep mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.litter_robot_4_panel_sleep_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[switch.litter_robot_4_weekday_sleep_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.litter_robot_4_weekday_sleep_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekday sleep schedule',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Weekday sleep schedule',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'weekday_sleep',
    'unique_id': 'LR4C000001_weekday_sleep',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[switch.litter_robot_4_weekday_sleep_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Litter-Robot 4 Weekday sleep schedule',
    }),
    'context': <ANY>,
    'entity_id': 'switch.litter_robot_4_weekday_sleep_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_the_entity_surface[time.litter_robot_4_panel_sleep_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.litter_robot_4_panel_sleep_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Panel sleep time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Panel sleep time',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'panel_sleep_time',
    'unique_id': 'LR4C000001_panel_sleep_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[time.litter_robot_4_panel_sleep_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Panel sleep time',
    }),
    'context': <ANY>,
    'entity_id': 'time.litter_robot_4_panel_sleep_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22:00:00',
  })
# ---
# name: test_the_entity_surface[time.litter_robot_4_panel_wake_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.litter_robot_4_panel_wake_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Panel wake time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Panel wake time',
    'platform': 'whiskerless',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'panel_wake_time',
    'unique_id': 'LR4C000001_panel_wake_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_the_entity_surface[time.litter_robot_4_panel_wake_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Litter-Robot 4 Panel wake time',
    }),
    'context': <ANY>,
    'entity_id': 'time.litter_robot_4_panel_wake_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '06:00:00',
  })
# ---
